2002-11-08  Douglas Lowder <dlowder@earthlink.net>
- Added patch from Scott Anderson to improve tests/ts_calibrate.c by taking
  median of multiple samples for each point.

2002-08-29  Douglas Lowder <dlowder@earthlink.net>
- Added tests/ts_print_raw.c to print raw uncalibrated touchscreen events
  (useful for debugging)

2002-07-11  Douglas Lowder <dlowder@earthlink.net>
- Added code in src/ts_read_raw.c to handle reading events from the mk712
  touchscreen driver on the Hitachi Webpad.

- Fixed a bug in plugins/linear.c (incorrect default calibration in
  absence of /etc/pointercal)

2002-07-10  Douglas Lowder <dlowder@earthlink.net>

- Added a patch by Holger Schurig <h.schurig@mn-logistik.de> to fix
  issues encountered on an Accelent PXA250 board.  The patch is against
  tests/ts_calibrate.c.  Among other things, it removes the extra event
  that was being read before the first crosshair is painted.

- Modified the code in plugins/dejitter.c to guarantee that the "release"
  touchscreen event (event with pressure=0 that occurs when the pointer is
  lifted from the screen) has the same xy position as the preceding event.
  This eliminates the cursor "jumping" that can occur otherwise.

- Fixed a bug in src/ts_read_raw.c that caused segfaults if TSLIB_TSEVENTTYPE
  was not defined in the environment.

2002-07-05  Douglas Lowder <dlowder@earthlink.net>

- libts.so now handles both UCB1x00 and H3600 type touchscreen events.  Default
  is UCB1x00; H3600 is selected by setting environment variable
  TSLIB_TSEVENTTYPE to the value "H3600".

- With the above change, generation of libtsipaq.so is no longer required,
  and it has been removed.

2002-07-03  Douglas Lowder <dlowder@earthlink.net>

- Added back the code to open the virtual console (works if device file chosen
  correctly).

- Made the console device and framebuffer device configurable for ts_calibrate
  and ts_test: new environment variables defined.
  TSLIB_FBDEVICE (defaults to /dev/fb0)