@@ -6,7 +6,7 @@
  * This file is placed under the LGPL.  Please see the file
  * COPYING for more details.
  *
- * $Id: ts_parse_vars.c,v 1.2 2002/06/19 18:55:08 dlowder Exp $
+ * $Id: ts_parse_vars.c,v 1.3 2003/03/04 17:09:47 dlowder Exp $
  *
  * Read raw pressure, x, y, and timestamp from a touchscreen device.
  */
@@ -19,18 +19,23 @@
 
 #include "tslib-private.h"
 
+char s_holder[1024];
+
 int tslib_parse_vars(struct tslib_module_info *mod,
 		     const struct tslib_vars *vars, int nr,
 		     const char *str)
 {
 	char *s, *p;
+	//char *s, *p;
 	int ret = 0;
 
 	if (!str)
 		return 0;
 
-	s = alloca(strlen(str));
-	strncpy(s,str,strlen(str));
+	//s = alloca(strlen(str));
+	bzero(s_holder,1024);
+	strncpy(s_holder,str,strlen(str));
+	s = s_holder;
 	while ((p = strsep(&s, " \t")) != NULL && ret == 0) {
 		const struct tslib_vars *v;
 		char *eq;
